force-app/main/default/objects/BGBK__Payment__c/fields/abd_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>abd_Payment_Method__c</fullName>
    <formula>TEXT( BGBK__Receipt__r.MUSW__Payment_Method__c )</formula>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>