force-app/main/default/objects/BGBK__Payment__c/fields/abd_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Review_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>