force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Amount_Available__c</fullName>
    <formula>BGBK__Amount__c - BGBK__Amount_Used__c - BGBK__Refunded_Amount__c - BGBK__Rejected_Amount__c + BGBK__Loss_Overage_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>