force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Application2__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Application2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>