force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Initial_Fund_Reference_Number_del__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Initial_Fund_Reference_Number_del__c</fullName>
    <formula>IF(ISPICKVAL(BGBK__Permit__r.MUSW__Permit_Type__c, 'Surface Impact Payment'), '534 060 0102 534','533 060 0102 533')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Fund Reference No DO NOT RELEASE</label>
    <type>Text</type>
</CustomField>