force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__License__c.field-meta.xml
<CustomField>
    <fullName>BGBK__License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>MUSW__License__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>