force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Loss_Overage_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Loss_Overage_Amount__c</fullName>
    <description>Internal accounting fund amount used to adjust amount by minor adjustments to balance accounts without creating small refunds or requesting additional tiny sums.</description>
    <inlineHelpText>Minor adjustment to balance accounts. Used under a specified threshold</inlineHelpText>
    <label>Loss/Overage Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>