force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Manual_Refund__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Manual_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Refund</label>
    <type>Checkbox</type>
</CustomField>