force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Source__c</fullName>
    <formula>IF(OR(ISNULL( BGBK__Deposit__c ), BGBK__Deposit__c  = ""),
	If(OR(ISNULL( BGBK__Receipt__c),  BGBK__Receipt__c = ""),
		"", HYPERLINK( "../" &amp; BGBK__Receipt__c,BGBK__Receipt__r.Name,"_parent" )),
	HYPERLINK( "../" &amp; BGBK__Deposit__c,BGBK__Deposit__r.Name,"_parent" ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Source</label>
    <type>Text</type>
</CustomField>