force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Purpose__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BGBK__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Application 1 Deposit</fullName>
            </value>
            <value>
                <fullName>Application 2 Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>