force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Refundee__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Refundee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refundee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>