force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Rejected_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Rejected_Amount__c</fullName>
    <label>Rejected Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>