force-app/main/default/objects/BGBK__Payment__c/fields/BGBK__Type__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
                <default>true</default>
                <label>Deposit</label>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>