force-app/main/default/objects/BGBK__Payment__c/fields/Receipt_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Amount_Remaining__c</fullName>
    <formula>BGBK__Receipt__r.MUSW__Amount_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt - Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>