force-app/main/default/objects/BGBK__Payment__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <formula>IF(OR(ISNULL( BGBK__Permit2__c ), BGBK__Permit2__c  = ""),
	If(OR(ISNULL( BGBK__Application2__c ),  BGBK__Application2__c  = ""),
		If(OR(ISNULL( BGBK__Complaint2__c ),  BGBK__Complaint2__c  = ""),
			IF(OR(ISNULL( BGBK__License2__c ),  BGBK__License2__c  = ""),
			"", HYPERLINK( "../" &amp; BGBK__License2__c, BGBK__License2__r.Name ,"_parent" )),
			HYPERLINK( "../" &amp; BGBK__Complaint2__c,BGBK__Complaint2__r.Name,"_parent" )),
		HYPERLINK( "../" &amp; BGBK__Application2__c,BGBK__Application2__r.Name,"_parent" )),
	HYPERLINK( "../" &amp; BGBK__Permit2__c,BGBK__Permit2__r.Name,"_parent" ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To</label>
    <type>Text</type>
</CustomField>