force-app/main/default/objects/BGBK__Payment__c/validationRules/BGBK__Amount_less_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Amount_less_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>BGBK__Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Payment Amount must be positive. Cancel or correct amount to >= 0</errorMessage>
</ValidationRule>