force-app/main/default/objects/BGBK__Payment__c/validationRules/BGBK__Payment_Used_greater_than_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Payment_Used_greater_than_Amount</fullName>
    <active>true</active>
    <description>Cannot use more than allocated</description>
    <errorConditionFormula>AND((BGBK__Amount_Used__c - BLANKVALUE(BGBK__Loss_Overage_Amount__c,0))  > (BGBK__Amount__c -  BLANKVALUE(BGBK__Refunded_Amount__c,0)), ISCHANGED(BGBK__Amount_Used__c))</errorConditionFormula>
    <errorMessage>Cannot Use (pay) more than Payment Amount (minus any Refunds)</errorMessage>
</ValidationRule>